# nansen-divergence

./: .env.example  .gitignore  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: Dockerfile  cache.py  cli_log.py  demo.py  entrypoint.sh  main.py  requirements.txt  scheduler.py
api/routers/: mcp_v1.py  performance_v1.py  signals_v1.py  webhooks_v1.py
api/tests/: test_cache.py  test_endpoints.py
docs/plans/: 2026-03-19-v4-terminal-rebrand-design.md  2026-03-19-v4-terminal-rebrand.md  2026-03-19-v5-webapp-design.md  2026-03-19-v5-webapp-plan.md  2026-03-28-cli-showcase-design.md
scripts/: mcp_refresh.py  seed_demo_data.py
src/nansen_divergence/: __init__.py  alerts.py  cli.py  deep_dive.py  divergence.py  formatter.py  history.py  mcp_client.py  mcp_search.py  mcp_tools.py  nansen.py  outcome_tracker.py  report.py  scanner.py  wallet_tracker.py  watch.py  webhook_dispatcher.py
tests/: test_alerts.py  test_alpha_score.py  test_api_v1.py  test_divergence.py  test_history.py  test_mcp_tools.py  test_nansen_api.py  test_outcome_tracker.py  test_report.py  test_scanner.py  test_wallet_tracker.py  test_webhooks.py
web/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/about/: page.tsx
web/src/app/flows/: page.tsx
web/src/app/performance/: page.tsx
web/src/app/radar/: page.tsx
web/src/app/token/[chain]/[address]/: page.tsx
web/src/components/: ApiKeyModal.tsx  CLIActivity.tsx  ChainPulse.tsx  Header.tsx  HeatMap.tsx  MetricCards.tsx  Navigation.tsx  SignalFeed.tsx  TokenTable.tsx
web/src/components/ui/: Badge.tsx  Card.tsx  Skeleton.tsx
web/src/lib/: api.ts  settings.ts  types.ts  utils.ts  watchlist.ts
