[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nansen-divergence"
version = "2.0.0"
description = "Multi-chain smart money divergence scanner with Wyckoff phase classification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["rich>=13.0"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
nansen-divergence = "nansen_divergence.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
