[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nansen-divergence"
version = "5.0.0"
description = "Multi-chain smart money divergence scanner with Wyckoff phase classification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["rich>=13.0"]

[project.optional-dependencies]
test = ["pytest>=7.0"]
web = ["streamlit>=1.32.0", "plotly>=5.18.0"]

[project.scripts]
nansen-divergence = "nansen_divergence.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"src/nansen_divergence/report.py" = ["E501"]
"streamlit_app.py" = ["E501"]
"api/demo.py" = ["E501"]
"api/main.py" = ["E501"]
"scripts/seed_demo_data.py" = ["E501"]
"tests/test_scanner.py" = ["E501"]
