[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nansen-divergence"
version = "6.0.0"
description = "Multi-chain smart money divergence scanner with Wyckoff phase classification"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["rich>=13.0"]

[project.optional-dependencies]
test = ["pytest>=7.0"]
web = []

[project.scripts]
nansen-divergence = "nansen_divergence.cli:main"

[project.urls]
Homepage = "https://nansen.gudman.xyz"
Repository = "https://github.com/Ridwannurudeen/nansen-divergence"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"src/nansen_divergence/report.py" = ["E501"]
"api/demo.py" = ["E501"]
"api/main.py" = ["E501"]
"scripts/seed_demo_data.py" = ["E501"]
"tests/test_scanner.py" = ["E501"]
